--- a/pages/index.css
+++ b/pages/index.css
@@ -1,3 +1,7 @@
-@import url(../blocks/page/page.css);
+@import url(../vendor/normalize.css);
 @import url(../pages/fonts.css);
+@import url(../blocks/page/page.css);
 @import url(../blocks/header/header.css);
+@import url(../blocks/lead/lead.css);
+@import url(./);
+
