--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,9 +2,16 @@
 @import url(./__lang-links/__lang-link/header__lang-link.css);
 
 .header {
-  max-height: 52px;
+  min-width: 1184px;
+  min-height: 52px;
   display: flex;
   justify-content: space-between;
-  align-items: end;
-  margin: 28px 48px 0;
+  margin: 28px 48px 56px;
+}
+
+@media (max-width: 1024px) {
+  .header {
+    min-width: 928px;
+    margin: 28px 48px 48px;
+  }
 }
