--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,3 +1,10 @@
 .lead__image {
-  position: relative;
+  box-shadow: 0 4px 4px rgba(0, 0, 0, .25);
+}
+
+@media (max-width: 1024px) {
+  .lead__image {
+    width: 928px;
+    height: 580px;
+  }
 }
