--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,8 +1,10 @@
 .lead__subtitle {
   text-align: center;
+  width: 640px;
+  height: 72px;
   font-family: 'Inter', sans-serif;
   font-weight: 400;
-  font-size: 1.875em;
+  font-size: 30px;
   line-height: 1.2;
-  margin: 0 auto 64px;
+  margin: 0 320px 64px;
 }
