--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,7 +1,10 @@
 .lead__title {
+  text-align: center;
+  min-width: 720px;
+  min-height: 200px;
   font-family: 'Inter', sans-serif;
   font-weight: 900;
-  font-size: 6em;
-  margin: 0 0 32px;
+  font-size: 96px;
+  margin: 0 280px 32px;
   line-height: 1.04;
 }
