--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -5,10 +5,16 @@
 @import url(./__caption/lead__caption.css);
 
 .lead {
+  min-width: 984px;
   display: flex;
-  justify-content: center;
   flex-direction: column;
-  text-align: center;
-  max-width: 984px;
-  margin: 56px auto 92px;
+  align-items: center;
+  margin: 0 148px 0;
+}
+
+@media (max-width: 1024px) {
+  .lead {
+    min-width: 928px;
+    margin: 0 48px 0;
+  }
 }
