--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,7 +1,19 @@
-
 .page {
   max-width: 1280px;
   background-color: #2A2C2F;
-  font-family: 'Inter';
+  font-family: 'Inter', sans-serif;
   color: #fff;
+  margin: 0 auto;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  text-rendering: optimizeLegibility;
+}
+
+@media (max-width: 1024px) {
+  .page {
+    max-width: 1024px;
+  }
 }
