--- a/blocks/header/__lang-links/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-links/__lang-link/header__lang-link.css
@@ -1,13 +1,20 @@
 .header__lang-link {
   color: #fff;
   font-weight: 400;
-  font-size: 1.5em;
-  margin-right: 18px;
+  font-size: 24px;
   line-height: 1.17;
-  
+  margin-right: 18px;
+
 }
 
 .header__lang-link:last-child {
   text-decoration: none;
   margin-right: 0;
+}
+
+@media (max-width: 320px) {
+  .header__lang-link {
+    font-size: 18px;
+    line-height: 1.11;
+  }
 }
