--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,17 +1,34 @@
 @import url(./__lang-links/header__lang-links.css);
 @import url(./__lang-links/__lang-link/header__lang-link.css);
+@import url(./__logo/header__logo.css);
 
 .header {
-  min-width: 1184px;
-  min-height: 52px;
+  max-width: 1184px;
+  max-height: 52px;
+  width: 100%;
   display: flex;
   justify-content: space-between;
   margin: 28px 48px 56px;
 }
 
-@media (max-width: 1024px) {
+@media (min-width: 1024px) {
   .header {
-    min-width: 928px;
+    max-width: 928px;
     margin: 28px 48px 48px;
+  }
+}
+
+@media (max-width: 768px) {
+  .header {
+    max-width: 720px;
+    margin: 28px 24px 48px;
+  }
+}
+
+@media (max-width: 320px) {
+  .header {
+    max-width: 288px;
+    max-height: 42px;
+    margin: 16px 16px 48px;
   }
 }
