--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,10 +1,28 @@
 .lead__image {
   box-shadow: 0 4px 4px rgba(0, 0, 0, .25);
+  max-width: 984px;
+  width: 100%;
 }
 
 @media (max-width: 1024px) {
   .lead__image {
-    width: 928px;
-    height: 580px;
+    /* margin: 0 48px 0;
+    max-width: 928px;
+    max-height: 962px; */
+
+  }
+}
+
+@media (max-width: 768px) {
+  .lead__image {
+    /* max-width: 768px;
+    max-height: 480px; */
+  }
+}
+
+@media (max-width: 320px) {
+  .lead__image {
+    /* max-width: 320px;
+    max-height: 200px; */
   }
 }
