--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,10 +1,33 @@
 .lead__subtitle {
   text-align: center;
-  width: 640px;
-  height: 72px;
+  width: 100%;
+  max-width: 640px;
+  max-height: 72px;
   font-family: 'Inter', sans-serif;
   font-weight: 400;
   font-size: 30px;
   line-height: 1.2;
   margin: 0 320px 64px;
+}
+
+@media (max-width: 1024px) {
+  .lead__subtitle {
+    margin: 0 192px 64px;
+  }
+}
+
+@media (max-width: 768px) {
+  .lead__subtitle {
+    margin: 0 48px 56px;
+  }
+}
+
+@media (max-width: 320px) {
+  .lead__subtitle {
+    max-width: 288px;
+    max-height: 40px;
+    font-size: 16px;
+    line-height: 1.25;
+    margin: 0 16px 40px;
+  }
 }
