--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -5,7 +5,9 @@
 @import url(./__caption/lead__caption.css);
 
 .lead {
-  min-width: 984px;
+  max-width: 984px;
+  max-height: 1005px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -14,7 +16,18 @@
 
 @media (max-width: 1024px) {
   .lead {
-    min-width: 928px;
     margin: 0 48px 0;
+  }
+}
+
+@media (max-width: 768px) {
+  .lead {
+    margin: 0;
+  }
+}
+
+@media (max-width: 320px) {
+  .lead {
+    margin: 0 2px 0;
   }
 }
