--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,4 +1,5 @@
 .page {
+  width: 100%;
   max-width: 1280px;
   background-color: #2A2C2F;
   font-family: 'Inter', sans-serif;
@@ -10,10 +11,4 @@
   -ms-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
   text-rendering: optimizeLegibility;
-}
-
-@media (max-width: 1024px) {
-  .page {
-    max-width: 1024px;
-  }
 }
