--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -3,15 +3,15 @@
 @import url(./__logo/header__logo.css);
 
 .header {
+  display: flex;
+  justify-content: space-between;
   max-width: 1184px;
   max-height: 52px;
   width: 100%;
-  display: flex;
-  justify-content: space-between;
   margin: 28px 48px 56px;
 }
 
-@media (min-width: 1024px) {
+@media (max-width: 1024px) {
   .header {
     max-width: 928px;
     margin: 28px 48px 48px;
