--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -7,18 +7,22 @@
   font-weight: 400;
   font-size: 30px;
   line-height: 1.2;
-  margin: 0 320px 64px;
+  padding: 0 172px 0;
+  margin: 0;
+  margin-bottom: 64px;
 }
 
 @media (max-width: 1024px) {
   .lead__subtitle {
-    margin: 0 192px 64px;
+    padding: 0 140px 0;
+    margin-bottom: 56px;
   }
 }
 
 @media (max-width: 768px) {
   .lead__subtitle {
-    margin: 0 48px 56px;
+    padding: 0 64px 0;
+    margin-bottom: 72px;
   }
 }
 
@@ -28,6 +32,8 @@
     max-height: 40px;
     font-size: 16px;
     line-height: 1.25;
-    margin: 0 16px 40px;
+    padding: 0 14px 0 18px;
+    margin-bottom: 40px;
+
   }
 }
