--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -6,18 +6,22 @@
   font-weight: 900;
   font-size: 96px;
   line-height: 1.04;
-  margin: 0 280px 32px;
+  padding: 0 136px 0;
+  margin: 0;
+  margin-bottom: 34px;
 }
 
 @media (max-width: 1024px) {
   .lead__title {
-    margin: 0 152px 32px;
+    padding: 0 104px 0;
+    margin-bottom: 34px;
   }
 }
 
 @media (max-width: 768px) {
   .lead__title {
-    margin: 0 24px 32px;
+    padding: 0 24px 0;
+    margin-bottom: 32px;
   }
 }
 
@@ -27,6 +31,7 @@
     max-height: 88px;
     font-size: 40px;
     line-height: 1.1;
-    margin: 0 16px 16px;
+    padding: 0 16px 0;
+    margin-bottom: 16px;
   }
 }
