--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,4 +1,3 @@
-
 @import url(./__subtitle/lead__subtitle.css);
 @import url(./__title/lead__title.css);
 @import url(./__image/lead__image.css);
@@ -8,14 +7,15 @@
   max-width: 984px;
   max-height: 1005px;
   width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  margin: 0;
+  padding: 0;
   margin: 0 148px 0;
 }
 
 @media (max-width: 1024px) {
   .lead {
+    max-width: 928px;
+    max-height: 962px;
     margin: 0 48px 0;
   }
 }
@@ -28,6 +28,8 @@
 
 @media (max-width: 320px) {
   .lead {
+    max-width: 320px;
+    max-height: 406px;
     margin: 0 2px 0;
   }
 }
