--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -5,6 +5,7 @@
   font-family: 'Inter', sans-serif;
   color: #fff;
   margin: 0 auto;
+  padding: 0;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: 100%;
