--- a/pages/index.css
+++ b/pages/index.css
@@ -3,5 +3,5 @@
 @import url(../blocks/page/page.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/lead/lead.css);
-@import url(./);
+@import url(../blocks/info/info.css);
 
