--- a/pages/index.css
+++ b/pages/index.css
@@ -4,4 +4,5 @@
 @import url(../blocks/header/header.css);
 @import url(../blocks/lead/lead.css);
 @import url(../blocks/info/info.css);
+@import url(../blocks/photo-grid/photo-grid.css);
 
