--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,6 +1,8 @@
+@import url(./__item/photo-grid__item.css);
+@import url(./__list/photo-grid__list.css);
+
 .photo-grid {
-  display: grid;
-  grid-template: repeat(3, 1fr) / repeat(4, 1fr);
-  gap: 16px;
+  max-width: 1184px;
+  max-height: 671px;
   margin: 0 48px 0;
 }
