--- a/pages/index.css
+++ b/pages/index.css
@@ -5,4 +5,4 @@
 @import url(../blocks/lead/lead.css);
 @import url(../blocks/info/info.css);
 @import url(../blocks/photo-grid/photo-grid.css);
-
+@import url(../blocks/places/places.css);
