--- a/pages/index.css
+++ b/pages/index.css
@@ -6,3 +6,4 @@
 @import url(../blocks/info/info.css);
 @import url(../blocks/photo-grid/photo-grid.css);
 @import url(../blocks/places/places.css);
+@import url(../blocks/cover/cover.css);
