--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -9,7 +9,7 @@
   z-index: 1;
 }
 
-.cover::after {
+.cover:after {
   content: "";
   background-color: rgb(42, 44, 47, .3);
   position: absolute;
@@ -18,4 +18,10 @@
   width: 100%;
   height: 100%;
   z-index: -1;
+  opacity: 0;
+  transition: opacity .3s;
+}
+
+.cover:hover:after {
+  opacity: 1;
 }
