--- a/pages/index.css
+++ b/pages/index.css
@@ -6,4 +6,7 @@
 @import url(../blocks/info/info.css);
 @import url(../blocks/photo-grid/photo-grid.css);
 @import url(../blocks/places/places.css);
+@import url(../blocks/cover-link/cover-link.css);
 @import url(../blocks/cover/cover.css);
+@import url(../blocks/footer/footer.css);
+
