--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -3,3 +3,21 @@
   max-width: 984px;
   width: 100%;
 }
+
+@media (max-width: 1024px) {
+  .lead__image {
+    max-width: 928px;
+  }
+}
+
+@media (max-width: 500px) {
+  .lead__image {
+    max-width: 500px;
+  }
+}
+
+@media (max-width: 320px){
+  .lead__image {
+    max-width: 320px;
+  }
+}
