--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,39 +1,41 @@
 .lead__subtitle {
   text-align: center;
-  width: 100%;
   max-width: 640px;
   max-height: 72px;
   font-family: 'Inter', sans-serif;
   font-weight: 400;
   font-size: 30px;
   line-height: 1.2;
-  padding: 0 172px 0;
   margin: 0;
-  margin-bottom: 64px;
+  margin: 0 172px 65px;
 }
 
 @media (max-width: 1024px) {
   .lead__subtitle {
-    padding: 0 140px 0;
-    margin-bottom: 56px;
+    margin: 0 144px 56px;
   }
 }
 
 @media (max-width: 768px) {
   .lead__subtitle {
-    padding: 0 64px 0;
-    margin-bottom: 72px;
+    margin: 0 64px 56px;
   }
+}
+
+@media (max-width: 500px) {
+  .lead__subtitle {
+    margin: 0 50px 0;
+    font-size: 20px;
+    max-width: 400px;
+    margin-bottom: 40px;
+}
 }
 
 @media (max-width: 320px) {
   .lead__subtitle {
     max-width: 288px;
-    max-height: 40px;
     font-size: 16px;
     line-height: 1.25;
-    padding: 0 14px 0 18px;
-    margin-bottom: 40px;
-
+    margin: 0 15px 40px;
   }
 }
