--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -6,7 +6,7 @@
 .lead {
   max-width: 984px;
   max-height: 1005px;
-  width: 100%;
+  /* width: 100%; */
   margin: 0;
   padding: 0;
   margin: 0 148px 0;
@@ -14,8 +14,6 @@
 
 @media (max-width: 1024px) {
   .lead {
-    max-width: 928px;
-    max-height: 962px;
     margin: 0 48px 0;
   }
 }
@@ -26,10 +24,9 @@
   }
 }
 
+
 @media (max-width: 320px) {
   .lead {
-    max-width: 320px;
-    max-height: 406px;
-    margin: 0 2px 0;
+    margin-right: 2px;
   }
 }
