--- a/blocks/info/__title/info__title.css
+++ b/blocks/info/__title/info__title.css
@@ -4,3 +4,10 @@
   line-height: 1.07;
   margin: 0;
 }
+
+@media (max-width: 500px) {
+  .info__title {
+    font-size: 32px;
+    line-height: 1.09;
+  }
+}
