--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 .page {
   width: 100%;
   max-width: 1280px;
@@ -12,6 +16,6 @@
   -ms-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
   text-rendering: optimizeLegibility;
-  
+
 }
 
