--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,7 +1,32 @@
-@import url(./__item/photo-grid__item.css);
+@import url(./__list/__item/photo-grid__item.css);
 @import url(./__list/photo-grid__list.css);
+@import url(./__list/__item/__item-image/photo-grid__item-image.css);
 
 .photo-grid {
-  max-width: 1184px;
   margin: 0 48px 0;
+}
+
+@media (max-width: 1024px) {
+  .photo-grid {
+
+  }
+}
+
+@media (max-width: 768px) {
+  .photo-grid {
+    margin: 0 24px 0;
+  }
+}
+
+@media (max-width: 500px) {
+  .photo-grid {
+    margin: 0 50px 0;
+
+  }
+}
+
+@media (max-width: 320px){
+  .photo-grid {
+    margin: 0 12px 0;
+  }
 }
