--- a/blocks/photo-grid/__list/photo-grid__list.css
+++ b/blocks/photo-grid/__list/photo-grid__list.css
@@ -3,32 +3,32 @@
   margin: 0;
   padding: 0;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(288px, 1fr));
-  grid-template-rows: repeat(auto-fit, minmax(213px, 1fr));
-  gap: 16px;
-
+  grid-template: repeat(auto-fit, minmax(213px, 1fr)) / repeat(auto-fit, minmax(288px, 1fr));
+  grid-gap: 16px;
+  width: 100%;
+  height: 100%;
 }
 
 @media (max-width: 1024px) {
   .photo-grid__list {
-    gap: 14px;
+    grid-gap: 14px;
   }
 }
 
 @media (max-width: 768px) {
   .photo-grid__list {
-    gap: 16px;
+    grid-gap: 16px;
   }
 }
 
 @media (max-width: 500px) {
   .photo-grid__list {
-    gap: 20px;
+    grid-gap: 20px;
   }
 }
 
 @media (max-width: 320px){
   .photo-grid__list {
-    gap: 12px;
+    grid-gap: 12px;
   }
 }
