--- a/blocks/places/place/__image/place__image.css
+++ b/blocks/places/place/__image/place__image.css
@@ -1,5 +1,12 @@
 .place__image {
   grid-area: image;
-  width: 460px;
+  max-width: 460px;
   max-height: 460px;
+}
+
+@media (max-width: 1024px) {
+  .place__image {
+    max-width: 440px;
+    max-height: 440px;
+  }
 }
