--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -9,3 +9,10 @@
   max-width: 984px;
   margin: 92px 148px;
 }
+
+@media (max-width: 1024px) {
+  .places {
+    max-width: 928px;
+    margin: 92px 48px;
+  }
+}
