--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -4,11 +4,18 @@
 
 .photo-grid {
   margin: 0 48px 0;
+  max-height: 671px;
 }
 
+@media (max-width: 1024px) {
+  .photo-grid {
+    max-height: 942px;
+  }
+}
 
 @media (max-width: 768px) {
   .photo-grid {
+
     margin: 0 24px 0;
   }
 }
@@ -20,7 +27,7 @@
   }
 }
 
-@media (max-width: 320px){
+@media (max-width: 320px) {
   .photo-grid {
     margin: 0 12px 0;
   }
