--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,32 +1,32 @@
-@import url(./__list/info__list.css);
-@import url(./__text/info__text.css);
-@import url(./__title/info__title.css);
-@import url(./__list/_list-item_bold/info_list-item_bold.css);
+@import url(./__list/intro__list.css);
+@import url(./__text/intro__text.css);
+@import url(./__title/intro__title.css);
+@import url(./__list/_parameter/intro__list_parameter.css);
 
-.info {
+.intro {
   margin: 92px 441px 92px 148px;
 }
 
 @media (max-width: 1024px) {
-  .info {
+  .intro {
     margin: 92px 286px 92px 48px;
   }
 }
 
 @media (max-width: 768px) {
-  .info {
+  .intro {
     margin: 88px 24px;
   }
 }
 
 @media (max-width: 500px) {
-  .info {
+  .intro {
     margin: 64px 16px;
   }
 }
 
 @media (max-width: 320px){
-  .info {
+  .intro {
     margin: 64px 16px;
   }
 }
