--- a/blocks/photo-grid/__list/photo-grid__list.css
+++ b/blocks/photo-grid/__list/photo-grid__list.css
@@ -3,8 +3,9 @@
   margin: 0;
   padding: 0;
   display: grid;
-  grid-template: repeat(auto-fit, minmax(213px, 1fr)) / repeat(auto-fit, minmax(288px, 1fr));
+  grid-template: minmax(213px, 1fr) / repeat(auto-fit, minmax(280px, 1fr));
   grid-gap: 16px;
+  width: 100%;
 }
 
 @media (max-width: 1024px) {
