--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -1,9 +1,8 @@
-
 .root {
   width: 100%;
   max-width: 1280px;
   background-color: #2A2C2F;
-  font-family: 'Inter', sans-serif;
+  font-family: 'Inter', Arial, Helvetica, sans-serif;
   color: #fff;
   margin: 0 auto;
   padding: 0;
@@ -13,6 +12,5 @@
   -ms-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
   text-rendering: optimizeLegibility;
-
 }
 
