--- a/pages/index.css
+++ b/pages/index.css
@@ -1,9 +1,10 @@
 @import url(../vendor/normalize.css);
 @import url(../pages/fonts.css);
 @import url(../blocks/root/root.css);
+@import url(../blocks/content/content.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/lead/lead.css);
-@import url(../blocks/info/info.css);
+@import url(../blocks/intro/intro.css);
 @import url(../blocks/photo-grid/photo-grid.css);
 @import url(../blocks/places/places.css);
 @import url(../blocks/cover-link/cover-link.css);
