--- a/blocks/photo-grid/__list/photo-grid__list.css
+++ b/blocks/photo-grid/__list/photo-grid__list.css
@@ -4,30 +4,30 @@
   padding: 0;
   display: grid;
   grid-template: minmax(213px, 1fr) / repeat(auto-fit, minmax(280px, 1fr));
-  grid-gap: 16px;
+  gap: 16px;
   width: 100%;
 }
 
 @media (max-width: 1024px) {
   .photo-grid__list {
-    grid-gap: 14px;
+    gap: 14px;
   }
 }
 
 @media (max-width: 768px) {
   .photo-grid__list {
-    grid-gap: 16px;
+    gap: 16px;
   }
 }
 
 @media (max-width: 500px) {
   .photo-grid__list {
-    grid-gap: 20px;
+    gap: 20px;
   }
 }
 
 @media (max-width: 320px){
   .photo-grid__list {
-    grid-gap: 12px;
+    gap: 12px;
   }
 }
