--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -3,28 +3,24 @@
 @import url(./__list/__item/__item-image/photo-grid__item-image.css);
 
 .photo-grid {
-  margin: 0 48px 0;
+  padding: 0 48px 0;
 }
 
-@media (max-width: 1024px) {
-  .photo-grid {
-  }
-}
 
 @media (max-width: 768px) {
   .photo-grid {
-
+    padding: 0 24px 0;
   }
+}
 
 @media (max-width: 500px) {
   .photo-grid {
-    margin: 0 50px 0;
-
+    padding: 0 50px 0;
   }
 }
 
 @media (max-width: 320px) {
   .photo-grid {
-    margin: 0 12px 0;
+    padding: 0 12px 0;
   }
 }
