--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -9,3 +9,15 @@
   margin: 0;
   margin-bottom: 48px;
 }
+
+@media (max-width: 768px) {
+  .place__website {
+    padding: 0 50px 0;
+  }
+}
+
+@media (max-width: 500px) {
+  .place__website {
+    padding: 0 16px 0;
+  }
+}
