--- a/pages/index.css
+++ b/pages/index.css
@@ -1,5 +1,5 @@
 @import url(../vendor/normalize.css);
-@import url(../pages/fonts.css);
+@import url(../vendor/fonts.css);
 @import url(../blocks/root/root.css);
 @import url(../blocks/content/content.css);
 @import url(../blocks/header/header.css);
@@ -7,6 +7,7 @@
 @import url(../blocks/intro/intro.css);
 @import url(../blocks/photo-grid/photo-grid.css);
 @import url(../blocks/places/places.css);
+@import url(../blocks/place/place.css);
 @import url(../blocks/cover-link/cover-link.css);
 @import url(../blocks/cover/cover.css);
 @import url(../blocks/footer/footer.css);
