--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,11 +1,32 @@
 .cover__subtitle {
   display: block;
   text-align: center;
-  max-width: 360px;
   font-size: 18px;
+  max-width: 360px;
   line-height: 22px;
   font-weight: 400;
   margin: 0;
-  padding: 32px 412px 245px;
+  margin-bottom: 245px;
   position: relative;
+}
+
+@media (max-width: 1024px) {
+  .cover__subtitle {
+    margin-bottom: 195px;
+  }
+}
+
+@media (max-width: 500px) {
+  .cover__subtitle {
+    font-size: 16px;
+    margin-bottom: 50px;
+  }
+}
+
+@media (max-width: 320px) {
+  .cover__subtitle {
+    font-size: 12px;
+    line-height: 16px;
+    margin: 0 16px 33px;
+  }
 }
