--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,11 +1,38 @@
 .cover__title {
-  text-align: center;
   font-weight: 900;
+  text-align: center;
   font-size: 72px;
   line-height: 76px;
   max-width: 560px;
   margin: 0;
-  padding: 245px 312px 0;
-  margin-bottom: 32px;
+  margin: 245px auto 32px;
   position: relative;
+}
+
+@media (max-width: 1024px) {
+  .cover__title {
+    margin: 195px auto 32px;
+  }
+}
+
+@media (max-width: 768px) {
+  .cover__title {
+    margin: 115px auto 32px;
+  }
+}
+
+@media (max-width: 500px) {
+  .cover__title {
+    font-size: 40px;
+    line-height: .95;
+    margin: 50px auto 20px;
+  }
+}
+
+@media (max-width: 320px) {
+  .cover__title {
+    font-size: 32px;
+    line-height: 35px;
+    margin: 33px auto 16px;
+  }
 }
