--- a/blocks/footer/__links/__link/footer__link.css
+++ b/blocks/footer/__links/__link/footer__link.css
@@ -14,4 +14,10 @@
   opacity: .8;
 }
 
-
+@media (max-width: 500px) {
+  .footer__link {
+    margin-bottom: 32px;
+    font-size: 24px;
+    line-height: .83;
+  }
+}
