--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,3 +1,4 @@
+@import url(./__links/footer__links.css);
 @import url(./__links/__link/footer__link.css);
 @import url(./__copyright/footer__copyright.css);
 
@@ -5,6 +6,25 @@
   display: flex;
   justify-content: space-between;
   max-width: 1184px;
-  max-height: 18px;
   margin: 0 48px 24px;
+}
+
+@media (max-width: 1024px) {
+  .footer {
+    max-width: 928px;
+  }
+}
+
+@media (max-width: 768px) {
+  .footer {
+    margin: 0 24px 24px;
+    max-width: 720px;
+  }
+}
+
+@media (max-width: 500px) {
+  .footer {
+    display: block;
+    margin: 0 24px 24px;
+  }
 }
