--- a/blocks/place/__article/place__article.css
+++ b/blocks/place/__article/place__article.css
@@ -1,3 +1,15 @@
 .place__article {
   grid-area: article;
 }
+
+@media (max-width: 500px) {
+  .place__article {
+    margin: 32px 0 0;
+  }
+}
+
+@media (max-width: 320px) {
+  .place__article {
+    margin: 32px 0 0;
+  }
+}
