--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -13,13 +13,13 @@
 
 @media (max-width: 768px) {
   .place__paragraph {
+   margin-bottom: 25px;
    font-size: 16px;
   }
 }
 
-@media (max-width: 500px) {
+@media (max-width: 320px) {
   .place__paragraph {
-   font-size: 16px;
-   padding: 0 16px 0;
+    margin: 0 16px 0;
   }
 }
