--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -10,7 +10,7 @@
 
 @media (max-width: 768px) {
   .place__title {
-    max-width: 330px;
+    max-width: 327px;
     font-size: 42px;
     line-height: 46px;
   }
@@ -18,13 +18,14 @@
 
 @media (max-width: 500px) {
   .place__title {
-    padding: 0 50px 0;
+    margin-bottom: 32px;
     font-size: 40px;
   }
 }
 
 @media (max-width: 320px) {
   .place__title {
+    margin-bottom: 32px;
     padding: 0 16px 0;
     font-size: 32px;
   }
