--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -18,6 +18,12 @@
   }
 }
 
+@media (max-width: 500px) {
+  .place__paragraph {
+   max-width: 390px;
+  }
+}
+
 @media (max-width: 320px) {
   .place__paragraph {
     margin: 0 16px 0;
