--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -25,8 +25,9 @@
 
 @media (max-width: 320px) {
   .cover__subtitle {
-    font-size: 12px;
-    line-height: 16px;
+    font-size: 10px;
+    max-width: 250px;
+    line-height: 12px;
     margin: 0 16px 33px;
   }
 }
