--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -31,8 +31,7 @@
 
 @media (max-width: 320px) {
   .cover__title {
-    font-size: 32px;
-    line-height: 35px;
-    margin: 33px auto 16px;
+    font-size: 28px;
+    margin: 33px 0 16px;
   }
 }
