--- a/blocks/footer/__links/__link/footer__link.css
+++ b/blocks/footer/__links/__link/footer__link.css
@@ -14,10 +14,14 @@
   opacity: .8;
 }
 
+.footer__link:last-child {
+  margin-bottom: 50px;
+}
+
 @media (max-width: 500px) {
   .footer__link {
     margin-bottom: 32px;
-    font-size: 24px;
+    font-size: 18px;
     line-height: .83;
   }
 }
