--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -27,7 +27,8 @@
 
 @media (max-width: 320px) {
   .place__image {
-    max-width: 320px;
-    max-height: 320px;
+    padding: 0 10px 0;
+    max-width: 250px;
+    max-height: 250px;
   }
 }
