--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -26,6 +26,8 @@
 
 @media (max-width: 320px) {
   .place__paragraph {
-    margin: 0 16px 0;
+    max-width: 250px;
+    font-size: 12px;
+    margin: 0 10px 0;
   }
 }
