--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -25,9 +25,10 @@
 
 @media (max-width: 320px) {
   .place__title {
+    max-width: 250px;
     margin-bottom: 32px;
-    padding: 0 16px 0;
-    font-size: 32px;
+    padding: 0 10px 0;
+    font-size: 28px;
   }
 }
 
