--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -12,7 +12,8 @@
 
 @media (max-width: 320px) {
   .place__website {
+    max-width: 250px;
     margin-bottom: 32px;
-    padding: 0 16px 0;
+    padding: 0 10px 0;
   }
 }
