--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,10 +1,9 @@
 .place__image {
   grid-area: image;
-  max-width: 460px;
-  max-height: 460px;
+  width: 100%;
 }
 
-@media (max-width: 1024px) {
+/* @media (max-width: 1024px) {
   .place__image {
     max-width: 440px;
     max-height: 440px;
@@ -31,4 +30,4 @@
     max-width: 250px;
     max-height: 250px;
   }
-}
+} */
