--- a/blocks/header/__lang-list/__lang-item/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-list/__lang-item/__lang-link/header__lang-link.css
@@ -3,13 +3,11 @@
   font-weight: 400;
   font-size: 24px;
   line-height: 1.17;
-  margin-right: 18px;
+  padding: 0;
+  margin: 0;
+  text-decoration: none;
 }
 
-.header__lang-link:last-child {
-  text-decoration: none;
-  margin-right: 0;
-}
 
 @media (max-width: 320px) {
   .header__lang-link {
