--- a/blocks/header/__lang-list/__lang-item/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-list/__lang-item/__lang-link/header__lang-link.css
@@ -6,8 +6,12 @@
   padding: 0;
   margin: 0;
   text-decoration: none;
+  transition: opacity .3s;
 }
 
+.header__lang-link:hover {
+  opacity: .8;
+}
 
 @media (max-width: 320px) {
   .header__lang-link {
