--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -5,19 +5,19 @@
   line-height: 76px;
   max-width: 560px;
   margin: 0;
-  margin: 245px auto 32px;
+  margin: 245px 0 32px;
   position: relative;
 }
 
 @media (max-width: 1024px) {
   .cover__title {
-    margin: 195px auto 32px;
+    margin: 195px 0 32px;
   }
 }
 
 @media (max-width: 768px) {
   .cover__title {
-    margin: 115px auto 32px;
+    margin: 115px 0 32px;
   }
 }
 
@@ -25,7 +25,7 @@
   .cover__title {
     font-size: 40px;
     line-height: .95;
-    margin: 50px auto 20px;
+    margin: 50px 0 20px;
   }
 }
 
