--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -3,31 +3,26 @@
   width: 100%;
 }
 
-/* @media (max-width: 1024px) {
+@media (max-width: 1024px) {
   .place__image {
     max-width: 440px;
-    max-height: 440px;
   }
 }
 
 @media (max-width: 768px) {
   .place__image {
     max-width: 340px;
-    max-height: 340px;
   }
 }
 
 @media (max-width: 500px) {
   .place__image {
     max-width: 390px;
-    max-height: 390px;
   }
 }
 
 @media (max-width: 320px) {
   .place__image {
-    padding: 0 10px 0;
     max-width: 250px;
-    max-height: 250px;
   }
-} */
+}
