--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -2,7 +2,7 @@
   width: 100%;
   max-width: 1280px;
   background-color: #2A2C2F;
-  font-family: 'Inter', Arial, Helvetica, sans-serif;
+  font-family: "Inter", Arial, Helvetica, sans-serif;
   color: #fff;
   margin: 0 auto;
   padding: 0;
