--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -30,7 +30,8 @@
 
 @media (max-width: 320px) {
   .cover__title {
-    font-size: 28px;
+    max-width: 288px;
+    font-size: 32px;
     margin: 33px 0 16px;
   }
 }
