--- a/blocks/footer/__links/__link/footer__link.css
+++ b/blocks/footer/__links/__link/footer__link.css
@@ -21,7 +21,8 @@
 @media (max-width: 500px) {
   .footer__link {
     margin-bottom: 32px;
-    font-size: 18px;
-    line-height: .83;
+    margin-right: 0;
+    font-size: 24px;
+    line-height: 1;
   }
 }
