--- a/blocks/place/__article/place__article.css
+++ b/blocks/place/__article/place__article.css
@@ -2,15 +2,15 @@
   grid-area: article;
 }
 
-@media (max-width: 500px) {
+/* @media (max-width: 500px) {
   .place__article {
-    margin: 32px 0 0;
+
   }
-}
+} */
 
 @media (max-width: 320px) {
   .place__article {
-    max-width: 250px;
-    margin: 32px 0 0;
+    max-width: 288px;
+    margin: 0 16px 0;
   }
 }
