--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -13,7 +13,6 @@
 @media (max-width: 320px) {
   .place__website {
     max-width: 250px;
-    margin-bottom: 32px;
-    padding: 0 10px 0;
+    margin: 0 16px 0;
   }
 }
