--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -2,9 +2,14 @@
   text-align: center;
   color: #fff;
   text-decoration: none;
+  background-color: rgba(42, 44, 47, .3);
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  position: relative;
+  transition: background-color .3s ease-in-out;
+}
+
+.cover__link:hover {
+  background-color: rgba(42, 44, 47, .8);
 }
