--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -4,7 +4,13 @@
 @import url(./__list/__list-parameter/intro__list-parameter.css);
 
 .intro {
-  margin: 92px 441px 92px 148px;
+  margin: 92px 442px 92px 148px;
+}
+
+@media (max-width: 1124px) {
+  .intro {
+    margin: 92px 286px 92px 88px;
+  }
 }
 
 @media (max-width: 1024px) {
