--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,10 +1,11 @@
 .lead__caption {
+  align-self: flex-start;
   font-weight: 400;
   font-size: 10px;
   line-height: 1.4;
   letter-spacing: 1.5px;
   text-transform: uppercase;
-  margin: 5px 0 0;
+  margin: 8px 0 0;
 }
 
 @media (max-width: 768px) {
