--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -5,10 +5,16 @@
 
 .lead {
   max-width: 984px;
-  max-height: 1005px;
-  margin: 0;
-  padding: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   margin: 0 148px 0;
+}
+
+@media (max-width: 1124px) {
+  .lead {
+    margin: 0 88px 0;
+  }
 }
 
 @media (max-width: 1024px) {
