--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,6 +1,6 @@
 .place__image {
   grid-area: image;
-  width: 100%;
+  max-width: 460px;
 }
 
 @media (max-width: 1024px) {
@@ -9,20 +9,20 @@
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 968px) {
   .place__image {
-    max-width: 340px;
+    max-width: 100%;
   }
 }
 
 @media (max-width: 500px) {
   .place__image {
-    max-width: 390px;
+    /* max-width: 390px; */
   }
 }
 
 @media (max-width: 320px) {
   .place__image {
-    max-width: 320px;
+    /* max-width: 288px; */
   }
 }
