--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -7,7 +7,15 @@
   margin: 0;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1024px) {
+  .place__title {
+    max-width: 440px;
+    font-size: 52px;
+    line-height: 56px;
+  }
+}
+
+@media (max-width: 968px) {
   .place__title {
     max-width: 327px;
     font-size: 42px;
@@ -23,7 +31,7 @@
 
 @media (max-width: 320px) {
   .place__title {
-    max-width: 250px;
+    max-width: 288px;
     padding: 0 16px 0;
     font-size: 28px;
   }
