--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -9,6 +9,7 @@
   grid-template-areas:
     "title website"
     "image article";
+    grid-template-columns: repeat(auto-fit, minmax(100%, 1fr));
   column-gap: 40px;
   row-gap: 48px;
   margin-bottom: 80px;
@@ -24,20 +25,22 @@
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .place {
     column-gap: 28px;
     margin-bottom: 73px;
-  }
-}
-
-@media (max-width: 500px) {
-  .place {
-    margin-bottom: 50px;
     grid-template-areas:
     "title"
     "website"
     "image"
     "article";
+  }
+}
+
+@media (max-width: 500px) {
+  .place {
+    row-gap: 32px;
+    margin-bottom: 50px;
+
   }
 }
