--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -5,7 +5,7 @@
 .cover {
   background-image: url(../../images/cover__background.png);
   background-size: cover;
-  background-position: center;
+  background-position: center center;
   margin: 0 48px 92px;
 }
 
