--- a/blocks/place/__article/place__article.css
+++ b/blocks/place/__article/place__article.css
@@ -1,4 +1,5 @@
 .place__article {
+  max-width: 484px;
   grid-area: article;
 }
 
@@ -6,6 +7,6 @@
 @media (max-width: 320px) {
   .place__article {
     max-width: 288px;
-    margin: 0 2px 0;
+    margin: 0 16px 0;
   }
 }
