--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -9,7 +9,7 @@
   grid-template-areas:
     "title website"
     "image article";
-    grid-template-columns: repeat(auto-fit, minmax(100%, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(288px, 1fr));
   column-gap: 40px;
   row-gap: 48px;
   margin-bottom: 80px;
