--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -5,21 +5,20 @@
   font-size: 30px;
   line-height: 1.2;
   margin: 0;
-  margin: 0 192px 65px;
+  margin-bottom: 65px;
 }
 
 @media (max-width: 1024px) {
   .lead__subtitle {
-    margin: 0 64px 56px;
+  margin-bottom: 56px;
   }
 }
 
-
-@media (max-width: 500px) {
+@media (max-width: 568px) {
   .lead__subtitle {
     font-size: 20px;
     max-width: 400px;
-    margin: 0 32px 40px;
+    margin-bottom: 40px;
 }
 }
 
