--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,28 +1,4 @@
 .place__image {
   grid-area: image;
-  max-width: 460px;
-}
-
-@media (max-width: 1024px) {
-  .place__image {
-    max-width: 440px;
-  }
-}
-
-@media (max-width: 968px) {
-  .place__image {
-    max-width: 100%;
-  }
-}
-
-@media (max-width: 500px) {
-  .place__image {
-    /* max-width: 390px; */
-  }
-}
-
-@media (max-width: 320px) {
-  .place__image {
-    /* max-width: 288px; */
-  }
+  width: 100%;
 }
